--- a/Sunduk.PWA/Components/Stuff/Arc2Component.razor
+++ b/Sunduk.PWA/Components/Stuff/Arc2Component.razor
@@ -2,7 +2,7 @@
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
             <MudField Label="Параметры" Variant="Variant.Filled" Underline="false" Class="mt-1"
-            @onfocusout="(() => CurrentImage = Images.Base)">
+                      @onfocusout="(() => CurrentImage = Images.Base)">
                 <MudGrid Spacing="0">
                     <MudItem xs="12">
                         <MudTextField @bind-Value="_PartDiameter" T="string" Label="Конечный диаметр" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"
@@ -14,7 +14,7 @@
                     </MudItem>
                     <MudItem xs="12">
                         <MudTextField @bind-Value="_StartDiameter" T="string" Label="Начальный диаметр" Variant="Variant.Text" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"
-                                      @onfocus="() => CurrentImage = Images.PartDiameter" Margin="Margin.Dense"/>
+                                      @onfocus="() => CurrentImage = Images.StartDiameter" Margin="Margin.Dense"/>
                     </MudItem>
                     <MudItem xs="12">
                         <MudTextField @bind-Value="_InsertRadius" T="string" Label="Радиус пластины" Variant="Variant.Text" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"
@@ -43,7 +43,7 @@
                     @if (CurrentImage == Images.StartDiameter)
                     {
                         <center>
-                            <img src="/img/stuffimages/arc2/arc2_start_diam.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                                <img src="/img/stuffimages/arc2/arc2_start_diam.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.ArcRadius)
@@ -67,7 +67,6 @@
                 <img src="/img/stuffimages/arc2/arc2_start_diam.svg" asp-append-version="true" width="0" height="0" />
                 <img src="/img/stuffimages/arc2/arc2_radius.svg" asp-append-version="true" width="0" height="0" />
                 <img src="/img/stuffimages/arc2/arc2_tool_radius.svg" asp-append-version="true" width="0" height="0" />
-
             </div>
         </MudHidden>
         <MudItem xs="12">
